--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,9 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(fs,dir_create)
 importFrom(gplots,heatmap.2)
+importFrom(igraph,"E<-")
+importFrom(igraph,E)
+importFrom(igraph,betweenness)
 importFrom(igraph,degree)
 importFrom(igraph,graph_from_data_frame)
 importFrom(rlang,.data)
