moving to bigdog

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
@@ -22,6 +23,10 @@ importFrom(igraph,E)
 importFrom(igraph,betweenness)
 importFrom(igraph,degree)
 importFrom(igraph,graph_from_data_frame)
+importFrom(parallel,clusterExport)
+importFrom(parallel,makeCluster)
+importFrom(parallel,stopCluster)
+importFrom(pbapply,pblapply)
 importFrom(rlang,.data)
 importFrom(scales,rescale)
 importFrom(stats,complete.cases)
