--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,23 +11,30 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
-importFrom(fs,dir_create)
 importFrom(igraph,"E<-")
 importFrom(igraph,E)
 importFrom(igraph,betweenness)
 importFrom(igraph,degree)
 importFrom(igraph,graph_from_data_frame)
+importFrom(imputeTS,na_interpolation)
+importFrom(padr,pad)
 importFrom(parallel,clusterExport)
+importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
+importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
 importFrom(pbapply,pblapply)
 importFrom(rlang,.data)
 importFrom(scales,rescale)
 importFrom(stats,complete.cases)
 importFrom(tidyr,spread)
+importFrom(vars,VAR)
+importFrom(vars,VARselect)
+importFrom(vars,causality)
