--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(pbapply,pblapply)
 importFrom(rlang,.data)
 importFrom(scales,rescale)
 importFrom(stats,complete.cases)
+importFrom(tidyr,gather)
 importFrom(tidyr,spread)
 importFrom(vars,VAR)
 importFrom(vars,VARselect)
