--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(get_corpus)
 export(get_corrs)
 export(get_meta)
 export(systr_granger)
+export(systr_granger_graph)
 export(systr_setup)
 export(whats_the_difference_between)
 importFrom(corrr,as_cordf)
@@ -20,12 +21,18 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,ggplot)
 importFrom(igraph,"E<-")
+importFrom(igraph,"V<-")
 importFrom(igraph,E)
+importFrom(igraph,V)
 importFrom(igraph,betweenness)
 importFrom(igraph,degree)
 importFrom(igraph,graph_from_data_frame)
@@ -40,6 +47,7 @@ importFrom(pbapply,pblapply)
 importFrom(rlang,.data)
 importFrom(scales,rescale)
 importFrom(stats,complete.cases)
+importFrom(tibble,tibble)
 importFrom(tidyr,gather)
 importFrom(tidyr,spread)
 importFrom(vars,VAR)
