ready to launch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ importFrom(igraph,betweenness)
 importFrom(igraph,degree)
 importFrom(igraph,graph_from_data_frame)
 importFrom(imputeTS,na_interpolation)
+importFrom(lubridate,year)
 importFrom(padr,pad)
 importFrom(parallel,clusterExport)
 importFrom(parallel,detectCores)
