--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_corrs)
 export(get_meta)
 export(systr_granger)
 export(systr_granger_graph)
+export(systr_granger_time_series)
 export(systr_setup)
 export(whats_the_difference_between)
 importFrom(corrr,as_cordf)
