--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ export(get_changes)
 export(get_corpus)
 export(get_corrs)
 export(get_meta)
+export(systr_country_indicator_summary)
 export(systr_granger)
 export(systr_granger_graph)
 export(systr_granger_time_series)
+export(systr_indicator_summary)
 export(systr_setup)
 export(whats_the_difference_between)
 importFrom(corrr,as_cordf)
